@@ -39,6 +39,8 @@ Release 0.9.1
   default product view and ZenMagick does not support any document specific
 	things
 - move features code into zm_product_features plugin
+- remove displaying of features from product_info; add sample code to plugin
+  readme
 
 Release 0.9.0
 - move cache manager page from core to zm_page_cache plugin
